k8s/dev/PolybotService/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: polybot-dev
  name: polybot-dev
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polybot-dev
  template:
    metadata:
      labels:
        app: polybot-dev
    spec:
      containers:
        - image: deemaa/polybot-dev:118
          name: polybot-container
---
apiVersion: v1
kind: Service
metadata:
  name: polybot-dev-service
  namespace: dev
spec:
  selector:
    app: polybot-dev
  ports:
    - port: 8443         # Internal port (what Ingress sees)
      targetPort: 8443   # Your app's container port
